--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>wiremock-standalone</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
